--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "flowsa/channel",
     "description": "Gets a list of all sections available for current site",
     "type": "craft-plugin",
-    "version": "1.2.0",
+    "version": "1.0.1",
     "keywords": [
         "craft",
         "cms",
@@ -18,11 +18,11 @@
     "authors": [
         {
             "name": "Flow",
-            "homepage": "www.flowsa.com"
+            "homepage": "https://www.flowsa.com"
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1|^4.0"
+        "craftcms/cms": "^3.0.0-RC1"
     },
     "autoload": {
         "psr-4": {
